deploy: 24c7e6dc16c879c20af8ad99d21aba40bf4506e2

--- a/numerical/linrec/bostanmori.html
+++ b/numerical/linrec/bostanmori.html
@@ -143,83 +143,8 @@
 <p>Reference - <a href="https://hal.inria.fr/hal-02917827v2/document">Alin Bostan, Ryuhei Mori. A Simple and Fast Algorithm for Computing the N-th Term of a Linearly Recurrent Sequence. SOSA’21 (SIAM Symposium on Simplicity in Algorithms), Jan 2021, Alexandria, United States. ffhal-02917827v2f</a></p>
 <h2 id="calculating-one-value-of-the-sequence"><a class="header" href="#calculating-one-value-of-the-sequence">Calculating one value of the sequence</a></h2>
 <h3 id="naive-multiplication-under-prime-modulo"><a class="header" href="#naive-multiplication-under-prime-modulo">Naive multiplication, under prime modulo</a></h3>
-<pre><code class="language-rust noplayground">/// f = f[0] + f[1]x + f[2]x2 + ...
-fn poly_mul(f: &amp;[u64], g: &amp;[u64], m: u64) -&gt; Vec&lt;u64&gt; {
-    let mut h: Vec&lt;u64&gt; = vec![0; f.len() + g.len() - 1];
-    for (i, &amp;u) in f.iter().enumerate() {
-        // u*x**i
-        for (j, &amp;v) in g.iter().enumerate() {
-            // v*x**j
-            h[i + j] += u * v;
-            h[i + j] %= m;
-        }
-    }
-    while let Some(&amp;v) = h.last() {
-        if v != 0 {
-            break;
-        }
-        h.pop();
-    }
-    h
-}
-
-fn poly_mul_even_order(f: &amp;[u64], g: &amp;[u64], m: u64) -&gt; Vec&lt;u64&gt; {
-    let mut h: Vec&lt;u64&gt; = vec![0; (f.len() + g.len()) / 2 + 2];
-    for (i, &amp;u) in f.iter().enumerate() {
-        if i &amp; 1 == 0 {
-            for (j, &amp;v) in g.iter().enumerate().step_by(2) {
-                h[(i + j) &gt;&gt; 1] += u * v;
-                h[(i + j) &gt;&gt; 1] %= m;
-            }
-        } else {
-            for (j, &amp;v) in g.iter().enumerate().skip(1).step_by(2) {
-                h[(i + j) &gt;&gt; 1] += u * v;
-                h[(i + j) &gt;&gt; 1] %= m;
-            }
-        }
-    }
-    while let Some(&amp;v) = h.last() {
-        if v != 0 {
-            break;
-        }
-        h.pop();
-    }
-    h
-}
-
-fn poly_mul_odd_order(f: &amp;[u64], g: &amp;[u64], m: u64) -&gt; Vec&lt;u64&gt; {
-    let mut h: Vec&lt;u64&gt; = vec![0; (f.len() + g.len()) / 2 + 2];
-    for (i, &amp;u) in f.iter().enumerate() {
-        if i &amp; 1 != 0 {
-            for (j, &amp;v) in g.iter().enumerate().step_by(2) {
-                h[(i + j) &gt;&gt; 1] += u * v;
-                h[(i + j) &gt;&gt; 1] %= m;
-            }
-        } else {
-            for (j, &amp;v) in g.iter().enumerate().skip(1).step_by(2) {
-                h[(i + j) &gt;&gt; 1] += u * v;
-                h[(i + j) &gt;&gt; 1] %= m;
-            }
-        }
-    }
-    while let Some(&amp;v) = h.last() {
-        if v != 0 {
-            break;
-        }
-        h.pop();
-    }
-    h
-}
-
-/// f(x) -&gt; f(-x)
-fn get_neg_x(f: &amp;[u64], m: u64) -&gt; Vec&lt;u64&gt; {
-    f.iter()
-        .enumerate()
-        .map(|(i, &amp;v)| if i &amp; 1 == 0 { v } else { m - v })
-        .collect()
-}
-
-/// Returns g, s, t s.t. g=gcd(a,b) and as+bt=r
+<pre><code class="language-rust noplayground">/// Returns g, s, t s.t. g=gcd(a,b) and as+bt=r
+#[inline(always)]
 fn ext_gcd(a: i64, b: i64) -&gt; (i64, i64, i64) {
     let (mut s, mut old_s) = (0, 1);
     let (mut r, mut old_r) = (b, a);
@@ -248,6 +173,86 @@ fn mod_inv(a: u64, m: u64) -&gt; u64 {
         x += m as i64;
     }
     x as u64 % m
+}
+
+/// f = f[0] + f[1]x + f[2]x2 + ...
+#[inline(always)]
+fn poly_mul(f: &amp;[u64], g: &amp;[u64], m: u64) -&gt; Vec&lt;u64&gt; {
+    let mut h: Vec&lt;u64&gt; = vec![0; f.len() + g.len() - 1];
+    for (i, &amp;u) in f.iter().enumerate() {
+        // u*x**i
+        for (j, &amp;v) in g.iter().enumerate() {
+            // v*x**j
+            h[i + j] += u * v;
+            h[i + j] %= m;
+        }
+    }
+    while let Some(&amp;v) = h.last() {
+        if v != 0 {
+            break;
+        }
+        h.pop();
+    }
+    h
+}
+
+#[inline(always)]
+fn poly_mul_even_order(f: &amp;[u64], g: &amp;[u64], m: u64) -&gt; Vec&lt;u64&gt; {
+    let mut h: Vec&lt;u64&gt; = vec![0; (f.len() + g.len()) / 2 + 2];
+    for (i, &amp;u) in f.iter().enumerate() {
+        if i &amp; 1 == 0 {
+            for (j, &amp;v) in g.iter().enumerate().step_by(2) {
+                h[(i + j) &gt;&gt; 1] += u * v;
+                h[(i + j) &gt;&gt; 1] %= m;
+            }
+        } else {
+            for (j, &amp;v) in g.iter().enumerate().skip(1).step_by(2) {
+                h[(i + j) &gt;&gt; 1] += u * v;
+                h[(i + j) &gt;&gt; 1] %= m;
+            }
+        }
+    }
+    while let Some(&amp;v) = h.last() {
+        if v != 0 {
+            break;
+        }
+        h.pop();
+    }
+    h
+}
+
+#[inline(always)]
+fn poly_mul_odd_order(f: &amp;[u64], g: &amp;[u64], m: u64) -&gt; Vec&lt;u64&gt; {
+    let mut h: Vec&lt;u64&gt; = vec![0; (f.len() + g.len()) / 2 + 2];
+    for (i, &amp;u) in f.iter().enumerate() {
+        if i &amp; 1 != 0 {
+            for (j, &amp;v) in g.iter().enumerate().step_by(2) {
+                h[(i + j) &gt;&gt; 1] += u * v;
+                h[(i + j) &gt;&gt; 1] %= m;
+            }
+        } else {
+            for (j, &amp;v) in g.iter().enumerate().skip(1).step_by(2) {
+                h[(i + j) &gt;&gt; 1] += u * v;
+                h[(i + j) &gt;&gt; 1] %= m;
+            }
+        }
+    }
+    while let Some(&amp;v) = h.last() {
+        if v != 0 {
+            break;
+        }
+        h.pop();
+    }
+    h
+}
+
+/// f(x) -&gt; f(-x)
+#[inline(always)]
+fn get_neg_x(f: &amp;[u64], m: u64) -&gt; Vec&lt;u64&gt; {
+    f.iter()
+        .enumerate()
+        .map(|(i, &amp;v)| if i &amp; 1 == 0 { v } else { m - v })
+        .collect()
 }
 
 /// Finds arr[n] where
