--- a/misc/psbase.html
+++ b/misc/psbase.html
@@ -165,6 +165,12 @@ fn main() {
             scan.next::&lt;$t&gt;()
         };
     }
+
+    #[allow(unused)]
+    macro_rules! out { ($($arg:tt)*) =&gt; { write!(out, $($arg)*).ok(); }; }
+
+    #[allow(unused)]
+    macro_rules! outln { ($($arg:tt)*) =&gt; { writeln!(out, $($arg)*).ok(); }; }
 }
 
 struct Scanner&lt;'a, I: Iterator&lt;Item = &amp;'a str&gt;&gt; {
@@ -235,6 +241,12 @@ fn main() {
             scan.next::&lt;$t&gt;()
         };
     }
+
+    #[allow(unused)]
+    macro_rules! out { ($($arg:tt)*) =&gt; { write!(out, $($arg)*).ok(); }; }
+
+    #[allow(unused)]
+    macro_rules! outln { ($($arg:tt)*) =&gt; { writeln!(out, $($arg)*).ok(); }; }
 
     let tc = next!(usize);
     for _ in 0..tc {}
