deploy: 789e33fefdbdf035250733867f5f79c4e2dcfbc4

--- a/misc/zero_one_trait.html
+++ b/misc/zero_one_trait.html
@@ -146,23 +146,17 @@
 }
 
 macro_rules! impl_zero_one {
-    ($($ty:ty), *) =&gt; {
-        $(
-            impl ZeroOne for $ty {
-                #[inline(always)]
-                fn one() -&gt; Self {
-                    1
-                }
-                #[inline(always)]
-                fn zero() -&gt; Self {
-                    0
-                }
-            }
-        )*
-    };
+    ($($ty:ty) *) =&gt; { $(
+        impl ZeroOne for $ty {
+            #[inline(always)]
+            fn one() -&gt; Self {1}
+            #[inline(always)]
+            fn zero() -&gt; Self {0}
+        }
+    )+ };
 }
 
-impl_zero_one!(isize, i8, i16, i32, i64, i128, usize, u8, u16, u32, u64, u128);
+impl_zero_one!(isize i8 i16 i32 i64 i128 usize u8 u16 u32 u64 u128);
 </code></pre>
 
                     </main>
