--- a/print.html
+++ b/print.html
@@ -2042,7 +2042,7 @@ fn compress_value&lt;T: Clone + Ord + Hash&gt;(arr: &amp;Vec&lt;T&gt;) -&gt; (Ha
 <h2 id="wo-testcases"><a class="header" href="#wo-testcases">w/o Testcases</a></h2>
 <pre><code class="language-rust noplayground">use std::{
     io::*,
-    str::{FromStr, SplitWhitespace},
+    str::{FromStr, SplitAsciiWhitespace},
 };
 
 fn main() {
@@ -2064,11 +2064,7 @@ fn main() {
             scan.next::&lt;$t&gt;()
         };
     }
-
-    #[allow(unused)]
     macro_rules! out { ($($arg:tt)*) =&gt; { write!(out, $($arg)*).ok(); }; }
-
-    #[allow(unused)]
     macro_rules! outln { ($($arg:tt)*) =&gt; { writeln!(out, $($arg)*).ok(); }; }
 }
 
@@ -2076,49 +2072,59 @@ struct Scanner&lt;'a, I: Iterator&lt;Item = &amp;'a str&gt;&gt; {
     input: I,
 }
 
-impl&lt;'a&gt; Scanner&lt;'a, SplitWhitespace&lt;'a&gt;&gt; {
+impl&lt;'a&gt; Scanner&lt;'a, SplitAsciiWhitespace&lt;'a&gt;&gt; {
     fn new(s: &amp;'a str) -&gt; Self {
         Self {
-            input: s.split_whitespace(),
+            input: s.split_ascii_whitespace(),
         }
     }
 }
 
 impl&lt;'a, I: Iterator&lt;Item = &amp;'a str&gt;&gt; Scanner&lt;'a, I&gt; {
     #[inline(always)]
-    fn next&lt;T: FromStr&gt;(&amp;mut self) -&gt; T {
-        self.input
-            .next()
-            .expect(&quot;Input has been exhausted&quot;)
-            .parse()
-            .ok()
-            .expect(&quot;Failed to parse&quot;)
+    fn next&lt;T: ParsableNum&gt;(&amp;mut self) -&gt; T {
+        T::from_str(self.next_str())
     }
-
     #[inline(always)]
-    fn next_option&lt;T: FromStr&gt;(&amp;mut self) -&gt; Option&lt;T&gt; {
-        let token = self.input.next();
-        match token {
-            Some(s) =&gt; s.parse().ok(),
-            None =&gt; None,
-        }
+    fn next_elem&lt;T: FromStr&gt;(&amp;mut self) -&gt; T {
+        self.next_str().parse().ok().expect(&quot;Failed to parse&quot;)
     }
-
     #[inline(always)]
     fn next_str(&amp;mut self) -&gt; &amp;'a str {
         self.input.next().expect(&quot;Input has been exhausted&quot;)
     }
-
+    #[inline(always)]
+    fn next_option&lt;T: ParsableNum&gt;(&amp;mut self) -&gt; Option&lt;T&gt; {
+        self.next_str_option().map(|s| T::from_str(s))
+    }
+    #[inline(always)]
+    fn next_elem_option&lt;T: FromStr&gt;(&amp;mut self) -&gt; Option&lt;T&gt; {
+        self.next_str_option().and_then(|s| s.parse().ok())
+    }
     #[inline(always)]
     fn next_str_option(&amp;mut self) -&gt; Option&lt;&amp;'a str&gt; {
         self.input.next()
     }
 }
+
+trait ParsableNum {
+    fn from_str(s: &amp;str) -&gt; Self;
+}
+macro_rules! impl_uint { ($($t:ty) *) =&gt; {$( impl ParsableNum for $t {
+    #[inline(always)]
+    fn from_str(s: &amp;str) -&gt; Self { s.bytes().fold(0, |a, b| a * 10 + (b - b'0') as Self) }
+})+ }; }
+impl_uint!(u8 u16 u32 u64 u128 usize);
+macro_rules! impl_int { ($($t:ty) *) =&gt; { $( impl ParsableNum for $t {
+    #[inline(always)]
+    fn from_str(s: &amp;str) -&gt; Self { let mut s = s.as_bytes(); let is_neg = s[0] == b'-'; if is_neg {s = &amp;s[1..];} let n = s.iter().fold(0, |a, b| a * 10 + (b - b'0') as Self); if is_neg {-n} else {n} }
+})+ }; }
+impl_int!(i8 i16 i32 i64 i128 isize);
 </code></pre>
 <h2 id="w-testcases"><a class="header" href="#w-testcases">w/ Testcases</a></h2>
 <pre><code class="language-rust noplayground">use std::{
     io::*,
-    str::{FromStr, SplitWhitespace},
+    str::{FromStr, SplitAsciiWhitespace},
 };
 
 fn main() {
@@ -2140,59 +2146,65 @@ fn main() {
             scan.next::&lt;$t&gt;()
         };
     }
-
-    #[allow(unused)]
     macro_rules! out { ($($arg:tt)*) =&gt; { write!(out, $($arg)*).ok(); }; }
-
-    #[allow(unused)]
     macro_rules! outln { ($($arg:tt)*) =&gt; { writeln!(out, $($arg)*).ok(); }; }
 
-    let tc = next!(usize);
-    for _ in 0..tc {}
+    let tc_s: usize = next!();
+    for _ in 0..tc_s {}
 }
 
 struct Scanner&lt;'a, I: Iterator&lt;Item = &amp;'a str&gt;&gt; {
     input: I,
 }
 
-impl&lt;'a&gt; Scanner&lt;'a, SplitWhitespace&lt;'a&gt;&gt; {
+impl&lt;'a&gt; Scanner&lt;'a, SplitAsciiWhitespace&lt;'a&gt;&gt; {
     fn new(s: &amp;'a str) -&gt; Self {
         Self {
-            input: s.split_whitespace(),
+            input: s.split_ascii_whitespace(),
         }
     }
 }
 
 impl&lt;'a, I: Iterator&lt;Item = &amp;'a str&gt;&gt; Scanner&lt;'a, I&gt; {
     #[inline(always)]
-    fn next&lt;T: FromStr&gt;(&amp;mut self) -&gt; T {
-        self.input
-            .next()
-            .expect(&quot;Input has been exhausted&quot;)
-            .parse()
-            .ok()
-            .expect(&quot;Failed to parse&quot;)
+    fn next&lt;T: ParsableNum&gt;(&amp;mut self) -&gt; T {
+        T::from_str(self.next_str())
     }
-
     #[inline(always)]
-    fn next_option&lt;T: FromStr&gt;(&amp;mut self) -&gt; Option&lt;T&gt; {
-        let token = self.input.next();
-        match token {
-            Some(s) =&gt; s.parse().ok(),
-            None =&gt; None,
-        }
+    fn next_elem&lt;T: FromStr&gt;(&amp;mut self) -&gt; T {
+        self.next_str().parse().ok().expect(&quot;Failed to parse&quot;)
     }
-
     #[inline(always)]
     fn next_str(&amp;mut self) -&gt; &amp;'a str {
         self.input.next().expect(&quot;Input has been exhausted&quot;)
     }
-
+    #[inline(always)]
+    fn next_option&lt;T: ParsableNum&gt;(&amp;mut self) -&gt; Option&lt;T&gt; {
+        self.next_str_option().map(|s| T::from_str(s))
+    }
+    #[inline(always)]
+    fn next_elem_option&lt;T: FromStr&gt;(&amp;mut self) -&gt; Option&lt;T&gt; {
+        self.next_str_option().and_then(|s| s.parse().ok())
+    }
     #[inline(always)]
     fn next_str_option(&amp;mut self) -&gt; Option&lt;&amp;'a str&gt; {
         self.input.next()
     }
 }
+
+trait ParsableNum {
+    fn from_str(s: &amp;str) -&gt; Self;
+}
+macro_rules! impl_uint { ($($t:ty) *) =&gt; {$( impl ParsableNum for $t {
+    #[inline(always)]
+    fn from_str(s: &amp;str) -&gt; Self { s.bytes().fold(0, |a, b| a * 10 + (b - b'0') as Self) }
+})+ }; }
+impl_uint!(u8 u16 u32 u64 u128 usize);
+macro_rules! impl_int { ($($t:ty) *) =&gt; { $( impl ParsableNum for $t {
+    #[inline(always)]
+    fn from_str(s: &amp;str) -&gt; Self { let mut s = s.as_bytes(); let is_neg = s[0] == b'-'; if is_neg {s = &amp;s[1..];} let n = s.iter().fold(0, |a, b| a * 10 + (b - b'0') as Self); if is_neg {-n} else {n} }
+})+ }; }
+impl_int!(i8 i16 i32 i64 i128 isize);
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="zeroone-trait"><a class="header" href="#zeroone-trait">Zero/One Trait</a></h1>
 <pre><code class="language-rust noplayground">pub trait ZeroOne: Sized + Copy {
@@ -2201,23 +2213,17 @@ impl&lt;'a, I: Iterator&lt;Item = &amp;'a str&gt;&gt; Scanner&lt;'a, I&gt; {
 }
 
 macro_rules! impl_zero_one {
-    ($($ty:ty), *) =&gt; {
-        $(
-            impl ZeroOne for $ty {
-                #[inline(always)]
-                fn one() -&gt; Self {
-                    1
-                }
-                #[inline(always)]
-                fn zero() -&gt; Self {
-                    0
-                }
-            }
-        )*
-    };
+    ($($ty:ty) *) =&gt; { $(
+        impl ZeroOne for $ty {
+            #[inline(always)]
+            fn one() -&gt; Self {1}
+            #[inline(always)]
+            fn zero() -&gt; Self {0}
+        }
+    )+ };
 }
 
-impl_zero_one!(isize, i8, i16, i32, i64, i128, usize, u8, u16, u32, u64, u128);
+impl_zero_one!(isize i8 i16 i32 i64 i128 usize u8 u16 u32 u64 u128);
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="fast-n-dimensional-array"><a class="header" href="#fast-n-dimensional-array">Fast n-dimensional Array</a></h1>
 <pre><code class="language-rust noplayground">struct Matrix&lt;T&gt;(Vec&lt;T&gt;, usize); // colnum
