deploy: ca12646896cf8fa0883164e1fedf922086bd0f80

--- a/misc/psbase.html
+++ b/misc/psbase.html
@@ -141,12 +141,14 @@
                     <main>
                         <h1 id="base-template"><a class="header" href="#base-template">Base Template</a></h1>
 <pre><code class="language-rust noplayground">fn main() {
+    // FastIO
     use {fastio::*, std::io::*};
     let input_str: &amp;str = get_input();
     let mut scan: Scanner&lt;_&gt; = Scanner::tokenize(input_str);
     let stdout = stdout();
     let out = &amp;mut BufWriter::with_capacity(262144, stdout.lock());
 
+    // FastIO Macros
     macro_rules! next {
         () =&gt; { scan.next() };
         (str) =&gt; { scan.next_str() };
